# csv-json-parser

./: .gitignore  .prettierc  .prettierignore  Cargo.toml  README.md  eslint.config.js  package.json  tsconfig.json
src/: input.rs  lib.rs  output.rs
src/tests/: mod.rs  parsing.rs
tests/: parsing.test.ts
ts/: index.ts
